# umu-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  RELEASING.md  export_teacher_course_permissions.py  findings.md  output.md  pyproject.toml  umu.skill
.claude/: settings.json
.claude/planning/: findings.md  progress.md  task_plan.md
.claude/skills/umu/: SKILL.md
.claude/skills/umu/evals/: evals.json
.claude/skills/umu/references/: tools.md
.github/scripts/: check_release_readiness.py
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: README-MCP-SETUP.md
docs/admin/: account-data-dictionary.md  user-task-data-dictionary.md
docs/superpowers/plans/: 2026-06-27-kimi-code-cli-integration.md
docs/superpowers/specs/: 2026-06-19-learning-program-access-permissions-design.md  2026-06-27-kimi-code-cli-integration-design.md
mcp-config/claude-code/: mcp.json
mcp-config/claude-desktop/: config.json
mcp-config/vscode-cline/: mcp.json
scripts/: update_imports.py
src/umu_sdk/: __init__.py
src/umu_sdk/adapters/mcp/: __init__.py  admin.py  batch.py  cos_upload.py  course_builder.py  document_upload.py  export_engine.py  image_upload.py  program_builder.py  program_student_manager.py  prompts.py  session.py  shared_access_permissions.py  shared_session_tools.py  student.py  teacher.py  tool_factory.py  utils.py  video_upload.py
src/umu_sdk/core/: __init__.py  admin_models.py  auth.py  client.py  credential_loader.py  encrypt.py  env_loader.py  errors.py  models.py  rate_limiter.py
src/umu_sdk/endpoints/: __init__.py  courses.py
src/umu_sdk/skills/: __init__.py  __main__.py  auth_config.py  capability_registry.py  capability_resolver.py  config.py  credential_manager.py  decorators.py  install.py  intent_capability_map.py  lifecycle_helpers.py  mcp_client.py  models.py  registry.py  role_resolver.py  server.py
src/umu_sdk/skills/builtin/: __init__.py  admin_accounts.py  admin_course_audit.py  admin_courses.py  admin_data.py  admin_instructors.py  admin_learning_programs.py  admin_learning_programs_personal.py  admin_organization.py  admin_tasks.py  admin_teaching_records.py  course_audit_lifecycle.py  course_creation.py  course_permissions.py  learning_flow.py  onboarding.py  program_permissions.py  student_assessment.py  student_course_completion.py  student_learning.py  teacher_collaboration.py  teacher_courses.py  teacher_learning_programs.py  teacher_resources.py  teacher_sections.py
src/umu_sdk/skills/bundled/: __init__.py
src/umu_sdk/tools/: decorators.py
tests/: conftest.py  test_admin_course_audit.py  test_admin_course_audit_skills.py  test_admin_course_permissions_regression.py  test_admin_courses.py  test_admin_department_tools.py  test_admin_export_tools_regression.py  test_admin_group_tools.py  test_admin_instructors.py  test_admin_learning_program_skills.py  test_admin_learning_programs.py  test_admin_learning_programs_personal.py  test_admin_learning_records.py  test_admin_skills.py  test_admin_teaching_records.py  test_admin_user_tasks.py  test_batch.py  test_course_audit_lifecycle.py  test_course_permissions.py  test_credential_manager.py  test_endpoints.py  test_fuzzy_matching.py  test_intent_capability_map.py  test_kimi_install.py  test_orchestrator_tool_redirect.py  test_pagination_progress.py  test_program_permissions.py  test_rate_limiter.py  test_role_resolver.py  test_scorm_upload.py  test_session.py  test_shared_access_permissions.py  test_shared_session_tools.py  test_skill_install.py  test_skills_config.py  test_skills_integration.py  test_skills_orchestrator.py  test_skills_registry.py  test_slash_role_entries.py  test_student_list_tools.py  (+10 more)
tests/adapters/mcp/: test_admin_program_tools.py  test_course_builder.py  test_export_engine.py  test_program_builder.py  test_program_student_manager.py  test_signin_section.py  test_student_enroll_form.py  test_teacher_program_tools.py  test_tool_factory.py
tests/helpers/: skill_mock.py
tests/skills/builtin/: test_teacher_learning_programs.py
(+37 files in other folders)
